# api/Image/internal/handler/uploadhandler.go
@@ -5,21 +5,14 @@ import (
 
 	"coderhub/api/Image/internal/logic"
 	"coderhub/api/Image/internal/svc"
-	"coderhub/api/Image/internal/types"
 	"github.com/zeromicro/go-zero/rest/httpx"
 )
 
-// 上传图片
+// UploadHandler 上传图片
 func UploadHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.UploadRequest
-		if err := httpx.Parse(r, &req); err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-			return
-		}
-
-		l := logic.NewUploadLogic(r.Context(), svcCtx)
-		resp, err := l.Upload(&req)
+		l := logic.NewUploadLogic(r.Context(), r, svcCtx)
+		resp, err := l.Upload()
 		if err != nil {
 			httpx.ErrorCtx(r.Context(), w, err)
 		} else {
